# aham

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: release.yml
grammar/: grammar.txt
include/exceptions/: error.h
include/lexer/: lexer.h
include/loader/: module_loader.h
include/parser/: ast.h  parser.h
include/symbol_table/: value.h
include/utils/: utils.h
include/vm/: compiler.h  opcode.h  value.h  vm.h
penguin-book/: basic_concepts.md
src/: main.cpp
src/compiler/utils/: deserializer.cpp  serializer.cpp
src/dependency_graph/: dependency_graph.cpp  dependency_scanner.cpp
src/interpreter/: expr_evaluator.cpp  interpreter.cpp  stmt_executor.cpp
src/lexer/: lexer.cpp
src/lexer/utils/: lexer_helpers.cpp
src/loader/: module_loader.cpp
src/manifest/: manifest_loader.cpp
src/parser/: parser.cpp
src/utils/: utils.cpp
src/vm/: compiler_core.cpp  compiler_expr.cpp  compiler_stmt.cpp  vm.cpp  vm_array.cpp  vm_builtins.cpp  vm_class.cpp  vm_helper.cpp  vm_ops.cpp  vm_trait.cpp
src/vm/utils/: value_utils.cpp
